--- a/public/includes/nav.ejs
+++ b/public/includes/nav.ejs
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a id="properties" class="nav-link" href="/properties">For Rent</a>
+                <a id="listings" class="nav-link" href="/listings">For Rent</a>
             </li>
             <li class="nav-item">
                 <a id="apply" class="nav-link" href="/apply">Apply Online</a>
