--- a/public/resources/css/dashboard.css
+++ b/public/resources/css/dashboard.css
@@ -65,9 +65,17 @@ body{
     color: maroon;
 }
 .main-link{
-    font-size: 18px;
+    font-size: 16px;
     font-weight: bold;
-    padding: 10px;
+    padding: 0px;
+    margin-bottom: -5px;
+    margin-top: -5px;
+    color: maroon;
+}
+.home-link{
+    font-size: 22px;
+    font-weight: bold;
+    padding: 1px;
     color: maroon;
 }
 .corner-link.active,
@@ -76,7 +84,6 @@ body{
    background-color: maroon !important;
    color: white;
 }
-
 .nav>li>a.active,
 .nav>li>a:hover,
 .nav>li>a:focus {
@@ -88,9 +95,9 @@ body{
     color: maroon;
 }
 .side-link{
-    font-size: 15px;
+    font-size: 14px;
     font-weight: bold;
-    padding: 20px;
+    padding: 13px;
     color: #050202;
 }
 .margin-bottom-50{
