--- a/public/dashboard_admin/admin.ejs
+++ b/public/dashboard_admin/admin.ejs
@@ -23,7 +23,7 @@
       <div class="col-12">
         <div class="nav nav-pills nav-fill">
           <div class="nav-item">
-            <a class="nav-link home-link" href="/dashboard">Dashboard</a>
+            <a class="nav-link home-link" href="/data">Dashboard</a>
           </div>
         </div> <!-- END NAV -->
       </div> <!-- END COL -->
