--- a/public/includes/dashboardNav.ejs
+++ b/public/includes/dashboardNav.ejs
@@ -18,7 +18,7 @@
 
       <div class="nav nav-pills nav-fill">
         <div class="nav-item">
-          <a class="nav-link main-link" href="/dashboard">Dashboard</a>
+          <a class="nav-link main-link" href="/data">Data</a>
         </div>
         <div class="nav-item">
           <a class="nav-link main-link" href="/users">Users</a>
