--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -26,18 +26,18 @@
           <div class="row">              
             <div class="col-md-12 mb-2  mt-3">
               <label for="email" class="sr-only">Email</label>              
-              <input type="text" class="form-control form-control-warning" name="email" placeholder="Email" autofocus required>
+              <input type="text" spellcheck="false" id="login-email" class="form-control form-control-warning" name="email" placeholder="Email" required>
             </div>
           </div>
           <div class="row">
             <div class="col-md-12 mb-2">
               <label for="password" class="sr-only">Password</label>         
-              <input type="password" class="form-control form-control-warning" id="password" name="password" placeholder="Password" required>
+              <input type="password" id="login-password" class="form-control form-control-warning" name="password" placeholder="password" required>
             </div>
           </div>
           <div class="checkbox">
             <label>
-              <input type="checkbox" value="remember-me"> Remember me
+              <input type="checkbox" name="remember"> Remember me
             </label>
           </div>
           <button class="btn btn-md btn-default btn-block" type="submit">Login</button>
@@ -48,6 +48,8 @@
     <% include ../includes/footer %>
     
     <% include ../includes/scripts %>
-
+    <script>
+      autofillEmail();
+    </script>
   </body>
 </html>
