Adding carousels to listings and home pages. Adding filter to listings

--- a/public/dashboard_admin/properties/properties.ejs
+++ b/public/dashboard_admin/properties/properties.ejs
@@ -30,7 +30,7 @@
             <div class="tab-pane show active fade" id="add-property">
 
               <div id="form-group">
-                <form class="container" action="http://127.0.0.4:5050/api/property/create" method="post">
+                <form class="container" action="/api/property/create" method="post">
                   <div class="row">
                     <div class="col-md-9">
                       <div class="row">              
@@ -172,7 +172,7 @@
             <div class="tab-pane fade" id="delete-property">
 
               <div id="form">
-                <form class="container mt-5 ml-5" action="http://127.0.0.4:5050/api/property/delete" method="post">
+                <form class="container mt-5 ml-5" action="/api/property/delete" method="post">
                   <div class="row">              
                     <div class="col-md-8 mb-2 mt-3">
                       <input type="text" class="form-control" name="id" placeholder="ID" required>
@@ -186,7 +186,7 @@
             <div class="tab-pane fade" id="upload-property-image">
 
               <div id="divForm">
-                <form class="container mt-5 ml-5" action="http://127.0.0.4:5050/api/property/images/create" method="post">
+                <form class="container mt-5 ml-5" action="/api/property/images/create" method="post">
                   <div class="row">              
                     <div class="col-md-8 mb-2">
                       <input type="text" class="form-control" name="id" placeholder="" required>      
@@ -207,7 +207,7 @@
             <div class="tab-pane fade" id="delete-property-image">
 
               <div id="divForm">
-                <form class="container mt-5 ml-5" action="http://127.0.0.4:5050/api/property/images/delete" method="post">
+                <form class="container mt-5 ml-5" action="/api/property/images/delete" method="post">
                   <div class="row">              
                     <div class="col-md-8 mb-2">
                       <input type="text" class="form-control" name="id" placeholder="ID" required>
