--- a/public/dashboard_admin/users/users.ejs
+++ b/public/dashboard_admin/users/users.ejs
@@ -30,7 +30,7 @@
             <div class="tab-pane fade show active" id="add-registered-user">
 
               <div id="form-group">
-                <form class="container" action="http://127.0.0.4:5050/api/registeredUser/create" method="post">
+                <form class="container" action="/api/registeredUser/create" method="post">
                   <div class="row">              
                     <div class="col-md-6 mb-2">
                       <input type="text" class="form-control" name="email" placeholder="Email" required>
@@ -72,7 +72,7 @@
             <div class="tab-pane fade" id="delete-registered-user">
 
               <div id="form">
-                <form class="container mt-5 ml-5" action="http://127.0.0.4:5050/api/registeredUser/delete" method="post">
+                <form class="container mt-5 ml-5" action="/api/registeredUser/delete" method="post">
                   <div class="row">              
                     <div class="col-md-8 mb-2">
                       <input type="email" class="form-control" name="email" placeholder="Email" required>
@@ -86,7 +86,7 @@
             <div class="tab-pane fade" id="add-unregistered-user">
 
               <div  id="app" id="divForm">
-                <form class="container" action="http://127.0.0.4:5050/api/unregisteredUser/create" method="post">
+                <form class="container" action="/api/unregisteredUser/create" method="post">
                   <div class="row">              
                     <div class="col-md-6 mb-2">
                       <input type="text" class="form-control" name="email" placeholder="Email" required>
@@ -118,7 +118,7 @@
             <div class="tab-pane fade" id="delete-unregistered-user">
 
               <div id="form">
-                <form class="container mt-5 ml-5" action="http://127.0.0.4:5050/api/unregisteredUser/delete" method="post">
+                <form class="container mt-5 ml-5" action="/api/unregisteredUser/delete" method="post">
                   <div class="row">              
                     <div class="col-md-8 mb-2">
                       <input type="text" class="form-control" name="email" placeholder="Email" required>
