--- a/public/dashboard_admin/admin.ejs
+++ b/public/dashboard_admin/admin.ejs
@@ -7,7 +7,7 @@
 
     <div class="row margin-bottom-10">
       <div class="col-9">
-        <h2>
+        <h2 class="text-capitalize">
           Welcome, <%- fullName %>.
         </h2>
       </div> <!-- END COL -->
