--- a/public/includes/dashboardNav.ejs
+++ b/public/includes/dashboardNav.ejs
@@ -4,7 +4,7 @@
           <a href="/admin" class="btn btn-outline-primary corner-link">Back</a>           
         </div>
         <div class="col-5">
-          <h3>
+          <h3 class="class="text-capitalize">
             <%- fullName %>
           </h3>
         </div>
