--- a/public/views/contact.ejs
+++ b/public/views/contact.ejs
@@ -11,7 +11,7 @@
           <div class="col-md-7" id="contactForm">
             <form role="form">
               <div class="form-group">
-                <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
+                <input type="text" class="form-control" id="name" name="name" placeholder="Name" autofocus required>
               </div>
               <div class="form-group">
                 <input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
