--- a/public/views/home.ejs
+++ b/public/views/home.ejs
@@ -6,13 +6,36 @@
 
       <% include ../includes/nav %>
 
-        <div class="jumbotron mt-5">
-          <h1 class="display-5">Let Us Help You Find It</h1>
-          <hr class="my-3" />
-
-          <p class="lead">
-            <a class="btn btn-dark btn-lg" href="/contact" role="button">Get in Touch</a>
-          </p>
+        <div class="jumbotron mt-1">
+          <h1 class="display-3">
+            Spacious Modern Living
+          </h1>
+            <div id="homeCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
+              <div class="carousel-inner" role="listbox">
+                <div class="carousel-item">
+                  <h1 class="ml-5 display-4">
+                    Living Excellent
+                  </h1>
+                </div>
+                <div class="carousel-item active">
+                  <h1 class="ml-5 display-4">
+                   Love Where You Live
+                  </h1>
+                </div>
+                <div class="carousel-item">
+                  <h1 class="ml-5 display-4">
+                   Amenities you deserve
+                  </h1>
+                </div>
+                <div class="carousel-item">
+                  <h1 class="ml-5 display-4">
+                    Above the crowd
+                  </h1>
+                </div>
+              </div>
+            </div>
+          <hr class="my-2"/>
+            <a class="btn btn-dark btn-lg " href="/contact" role="button">Get in Touch</a>
         </div>
 
     </div>
