--- a/public/views/listings.ejs
+++ b/public/views/listings.ejs
@@ -7,83 +7,206 @@
       <% include ../includes/nav %>
 
       <% include ../includes/imagesModal %>
-      
-      <br />
-      
-      <div class="row ">
+            
+      <div class="row">
         <div class="col-md-12 text-center">
-            <h2>Properties</h2>
-        </div>
-      </div>
+          <form class="container">
+            <fieldset class="form-group">
+              <legend class="mb-3">Filter Listings</legend>
+              <div class="form-group">
+                <div class="row">
+                    <label>
+                      Rent (USD):
+                    </label>
+                  <div class="col-md-5">
+                    <input type="text" class="form-control" name="rentMin" placeholder="Minimum">
+                  </div>
+                    <label>
+                      -
+                    </label>
+                  <div class="col-md-5">
+                    <input type="text" class="form-control" name="rentMax" placeholder="Maximum">
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-4 mt-2">
+                    <input type="text" class="form-control" name="city" placeholder="City">
+                  </div>
+                  <div class="col-md-4 mt-2">
+                    <select class="form-control">
+                      <option selected disabled>Number of Rooms</option>
+                      <option>1</option>
+                      <option>2</option>
+                      <option>3</option>
+                      <option>4</option>
+                      <option>5</option>
+                    </select>
+                  </div>
+                  <div class="col-md-4 mt-2">
+                    <select class="form-control" name="type">
+                      <option selected disabled>Type</option>
+                      <option>Single-Family Home</option>
+                      <option>Duplex / Double / 2-Family</option>
+                      <option>Efficiency / Studio</option>
+                      <option>Condominium</option>
+                      <option>Apartment</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+              <div class="form-check">
+                <label class="form-check-label mr-3">
+                  <input type="checkbox" class="form-check-input">
+                  Basement
+                </label>
+                <label class="form-check-label mr-3">
+                  <input type="checkbox" class="form-check-input">
+                  Garage
+                </label>
+                <label class="form-check-label mr-3">
+                  <input type="checkbox" class="form-check-input">
+                  Fence
+                </label>
+                <label class="form-check-label mr-3">
+                  <input type="checkbox" class="form-check-input">
+                  Washer / Dryer
+                </label>
+                <label class="form-check-label mr-3">
+                  <input type="checkbox" class="form-check-input">
+                  Furnished
+                </label>
+              </div>
+            </fieldset>
+            <button type="submit" class="btn btn-default">Search</button>
+          </form>        
+        </div> <!-- END COL -->
+      </div> <!-- END ROW -->
 
       <br />
 
       <div class="row">
-        <div class="col-md-6">
-          <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
-            <img class="card-img-top w-50" src="/images/house.png" alt="Property 3 Image">
-            <div class="card-body">
-              <h4 class="card-title">Big Image Here</h4>
-              <p class="card-text">Property Address</p>
-              <a href="#" class="btn btn-primary imageButton" data-toggle="modal" data-target="#imagesModal">See More</a>
-            </div>
-          </div>
-        </div>
         <div class="col-md-6 mb-1">
-          <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
+          <div class="card text-center" style="height: 26rem; width: 39rem; padding: 10px;">
             <div class="card-body">
-              <h4 class="card-title">Details</h4>
-              <p class="card-text">Number of rooms, fence, sq ft, etc.</p>
+              <p class="card-text font-weight-bold">Property Address</p>
+              <p class="card-text">Details: Number of rooms, fence, sq ft, etc.</p>
             </div>
           </div>
-        </div>
-      </div>
+        </div> <!-- END COL -->
+
+        <div class="col-md-6 mb-1">
+          <div class="card-body">
+            <div id="carouselExampleOne" class="carousel slide" data-ride="false">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleOne" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleOne" data-slide-to="1"></li>
+                <li data-target="#carouselExampleOne" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleOne" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleOne" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              </a>
+            </div>
+          </div>
+        </div> <!-- END COL -->
+      </div> <!-- END ROW -->
 
       <br />
 
       <div class="row">
-        <div class="col-md-6">
-          <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
-            <img class="card-img-top w-50" src="/images/house.png" alt="Property 3 Image">
+        <div class="col-md-6 mb-1">
+          <div class="card text-center" style="height: 26rem; width: 39rem; padding: 10px;">
             <div class="card-body">
-              <h4 class="card-title">Big Image Here</h4>
-              <p class="card-text">Property Address</p>
-              <a href="#" class="btn btn-primary imageButton" data-toggle="modal" data-target="#imagesModal">See More</a>
+              <p class="card-text font-weight-bold">Property Address</p>
+              <p class="card-text">Details: Number of rooms, fence, sq ft, etc.</p>
             </div>
           </div>
-        </div>
-        <div class="col-md-5 mb-1">
-          <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
-            <div class="card-body">
-              <h4 class="card-title">Details</h4>
-              <p class="card-text">Number of rooms, fence, sq ft, etc.</p>
+        </div> <!-- END COL -->
+
+        <div class="col-md-6 mb-1">
+          <div class="card-body">
+            <div id="carouselExampleTwo" class="carousel slide" data-ride="false">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleTwo" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleTwo" data-slide-to="1"></li>
+                <li data-target="#carouselExampleTwo" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleTwo" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleTwo" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              </a>
             </div>
           </div>
-        </div>
-      </div>
+        </div> <!-- END COL -->
+      </div> <!-- END ROW -->
 
       <br />
 
       <div class="row">
-        <div class="col-md-6">
-          <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
-            <img class="card-img-top w-50" src="/images/house.png" alt="Property 3 Image">
+        <div class="col-md-6 mb-1">
+          <div class="card text-center" style="height: 26rem; width: 39rem; padding: 10px;">
             <div class="card-body">
-              <h4 class="card-title">Big Image Here</h4>
-              <p class="card-text">Property Address</p>
-              <a href="#" class="btn btn-primary imageButton" data-toggle="modal" data-target="#imagesModal">See More</a>
+              <p class="card-text font-weight-bold">Property Address</p>
+              <p class="card-text">Details: Number of rooms, fence, sq ft, etc.</p>
             </div>
           </div>
-        </div>
-        <div class="col-md-5 mb-1">
-          <div class="card text-center" style="width: 35rem; height: 25rem; padding: 10px;">
-            <div class="card-body">
-              <h4 class="card-title">Details</h4>
-              <p class="card-text">Number of rooms, fence, sq ft, etc.</p>
+        </div> <!-- END COL -->
+
+        <div class="col-md-6 mb-1">
+          <div class="card-body">
+            <div id="carouselExampleThree" class="carousel slide" data-ride="false">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleThree" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleThree" data-slide-to="1"></li>
+                <li data-target="#carouselExampleThree" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner" role="listbox">
+                <div class="carousel-item active">
+                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block img-fluid" style="height: 26rem; width: 39rem;" src="/images/house2.png" alt="Property Image">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleThree" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleThree" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              </a>
             </div>
           </div>
-        </div>
-      </div>
+        </div> <!-- END COL -->
+      </div> <!-- END ROW -->
 
       <br />
 
