--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -37,7 +37,7 @@
           </div>
           <div class="checkbox">
             <label>
-              <input type="checkbox" name="remember"> Remember me
+              <input type="checkbox" id="remember" name="remember"> Remember me
             </label>
           </div>
           <button class="btn btn-md btn-default btn-block" type="submit">Login</button>
