--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <% include ../includes/head %>
+
   <body>
     <div class="container">
-
       <% include ../includes/nav %>
       
       <% include ../includes/invalidLoginModal %>
@@ -48,8 +48,6 @@
     <% include ../includes/footer %>
     
     <% include ../includes/scripts %>
-    <script>
-      autofillEmail();
-    </script>
+    <script src="/js/login.js"></script>
   </body>
 </html>
