--- a/public/dashboard_admin/users/users.ejs
+++ b/public/dashboard_admin/users/users.ejs
@@ -11,24 +11,27 @@
             <li class="nav-item">
               <a class="nav-link side-link active" id="add-registered-user-tab" data-toggle="pill" href="#add-registered-user">Add Registered</a>
             </li>
+
             <div class="dropdown-divider"></div>
             <li class="nav-item">
               <a class="nav-link side-link" id="add-unregistered-user-tab" data-toggle="pill" href="#add-unregistered-user">Add Unregistered</a>
             </li>
+
             <div class="dropdown-divider"></div>
             <li class="nav-item">
               <a class="nav-link side-link" id="delete-registered-user-tab" data-toggle="pill" href="#delete-registered-user">Delete Registered</a>
             </li>
+
             <div class="dropdown-divider"></div>
             <li class="nav-item">
               <a class="nav-link side-link" id="delete-unregistered-user-tab" data-toggle="pill" href="#delete-unregistered-user">Delete Unregistered</a>
             </li>
           </ul>
-        </div>
+        </div> <!-- END COL -->
+
         <div class="col-9">
           <div class="tab-content" id="v-pills-tabContent">
             <div class="tab-pane fade show active" id="add-registered-user">
-
               <div id="form-group">
                 <form class="container" action="/api/registeredUser/create" method="post">
                   <div class="row">              
@@ -67,10 +70,9 @@
                   <button class="btn btn-md btn-default submit-button-center" type="submit">Submit</button>
                 </form>
               </div>
+            </div> <!-- END TAB -->
 
-            </div>
             <div class="tab-pane fade" id="delete-registered-user">
-
               <div id="form">
                 <form class="container mt-5 ml-5" action="/api/registeredUser/delete" method="post">
                   <div class="row">              
@@ -81,10 +83,9 @@
                   <button class="btn btn-md btn-default submit-button-center" type="submit">Submit</button>
                 </form>
               </div>
+            </div> <!-- END TAB -->
 
-            </div>
             <div class="tab-pane fade" id="add-unregistered-user">
-
               <div  id="app" id="divForm">
                 <form class="container" action="/api/unregisteredUser/create" method="post">
                   <div class="row">              
@@ -113,10 +114,9 @@
                   <button class="btn btn-md btn-default submit-button-center" type="submit">Submit</button>
                 </form>
               </div>
+            </div>  <!-- END TAB -->
 
-            </div>
             <div class="tab-pane fade" id="delete-unregistered-user">
-
               <div id="form">
                 <form class="container mt-5 ml-5" action="/api/unregisteredUser/delete" method="post">
                   <div class="row">              
@@ -127,14 +127,12 @@
                   <button class="btn btn-md btn-default submit-button-center" type="submit">Submit</button>
                 </form>
               </div>
-            </div>
+            </div> <!-- END TAB -->
 
-          </div>
-        </div>
-      </div>
-      
-    <!-- END NG -->
-    </div>
+          </div> <!-- END TABS -->
+        </div> <!-- END COL -->
+      </div> <!-- END ROW -->
+    </div> <!-- END NG -->
 
     <% include ../../includes/dashboardScripts %>
   </body>
