--- a/public/views/home.ejs
+++ b/public/views/home.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <% include ../includes/head %>
+
   <body>
     <div class="container">   
-
       <% include ../includes/nav %>
-
         <div class="jumbotron mt-1">
           <h1 class="display-3">
             Spacious Modern Living
@@ -16,24 +15,27 @@
                   <h1 class="ml-5 display-4">
                    Love Where You Live
                   </h1>
-                </div>
+                </div> <!-- END ITEM -->
                 <div class="carousel-item">
                   <h1 class="ml-5 display-4">
                    Amenities you deserve
                   </h1>
-                </div>
+                </div> <!-- END ITEM -->
                 <div class="carousel-item">
                   <h1 class="ml-5 display-4">
                     Above the crowd
                   </h1>
-                </div>
-              </div>
-            </div>
-          <hr class="my-2"/>
-            <a class="btn btn-dark btn-lg " href="/contact" role="button">Get in Touch</a>
-        </div>
+                </div> <!-- END ITEM -->
+              </div> <!-- END INNER -->
+            </div> <!-- END CAROUSEL -->
 
-    </div>
+            <hr class="my-2"/>
+
+            <a class="btn btn-dark btn-lg " href="/contact" role="button">
+              Get in Touch
+            </a>
+        </div> <!-- END JUMBO -->
+    </div> <!-- END CONTAINER -->
 
     <% include ../includes/footer %>
 
